Fix plugin mode not being filtered on UI added lower
Signed-off-by: cafalchio <mcafalchio@gmail.com>

--- a/mcpgateway/templates/plugins_partial.html
+++ b/mcpgateway/templates/plugins_partial.html
@@ -263,7 +263,7 @@
       data-name="{{ plugin.name | lower }}"
       data-description="{{ plugin.description | decode_html | lower }}"
       data-author="{{ plugin.author | lower }}"
-      data-mode="{{ plugin.mode }}"
+      data-mode="{{ plugin.mode | lower }}"
       data-status="{{ plugin.status }}"
       data-hooks="{{ plugin.hooks | join(',') if plugin.hooks else '' }}"
       data-tags="{{ plugin.tags | join(',') if plugin.tags else '' }}"
